--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="col">
 
-            <img src="Images/pepperoni-pizza.png" alt="pepperoni-pizza" class="pic">
+            <img src="images/pepperoni-pizza.png" alt="pepperoni-pizza" class="pic">
 
             <h3>pepperoni-pizza</h3>
 
@@ -72,7 +72,7 @@
 
         <div class="col">
 
-            <img src="Images/hawaiian.png" alt="hawaiian" class="pic">
+            <img src="images/hawaiian.png" alt="hawaiian" class="pic">
 
             <h3>hawaiian</h3>
 
@@ -82,7 +82,7 @@
 
         <div class="col">
 
-            <img src="Images/cheese.png" alt="cheese" class="pic">
+            <img src="images/cheese.png" alt="cheese" class="pic">
 
             <h3>cheese</h3>
 
@@ -92,7 +92,7 @@
 
         <div class="col">
 
-            <img src="Images/seafood.png" alt="seafod" class="pic">
+            <img src="images/seafood.png" alt="seafod" class="pic">
 
             <h3>seafood</h3>
 
